2025-02-01  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.2-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.2-alpha03: Café Dirty Bird';git push
	git tag -a 5.3.2-alpha03 -m '';git push --tags

	* NCO 5.3.2-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.2-alpha02: ';git push
	git tag -a 5.3.2-alpha02 -m 'all: doc log_lvl; ncremap: CAMS lnsp lev_2, ps_nm_out mtd, hyb cff cf mtd, fix ECMWF/IFS ntp';git push --tags

	* ncks: Fix ECMWF/IFS interpolation when PS is in vertical grid	template file
	Solves regression reported by Erik Koene on SourceForge 20250117

	* ncks: Add CF metadata hybrid sigma-pressure grid coordinates

	* ncks: Rename ECMWF/IFS output surface pressure from lnsp to PS

	* ncks: Overwrite metadata to ECMWF/IFS output surface pressure

2025-01-31  Charlie Zender  <zender@uci.edu>

	* nco.texi: Add short section on --log_lvl

	* all: No longer report debugging configuration with -r

	* ncremap: Support recent CAMS changes by not expecting lev_2 dimension in ECMWF/IFS lnps

	* NCO 5.3.2-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.2-alpha01: Hotel Van Zandt';git push
	git tag -a 5.3.2-alpha01 -m 'Functionally identical to 5.3.1; ncremap/ncclimo srun default; all: fix qnt w/ grp';git push --tags

	* Pass grp_out_id not nc_id to nco_qnt_mtd() so quantization metadata works on variables in non-root groups

2025-01-22  Charlie Zender  <zender@uci.edu>

	* ncclimo/ncremap: Shift default node manager from mpirun to srun

	* nco.texi: Contrast NCO behavior with CF/NUG for type of _FillValue when packing (patch from lguez)

2025-01-12  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.1 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.1: Dark Sunset (Palisades Lost)';git push
	git tag -a 5.3.1 -m 'ncks: autoconversion in regridder/interpolator; ncremap: PS fix tm dmn, ERA5 t MERRA2 H, PM --npo';git push --tags

	* Document 5.3.1

2025-01-03  Charlie Zender  <zender@uci.edu>
